# algorithms-c

./: .gitignore  CMakeLists.txt
heap/: 1046.c  451.c  CMakeLists.txt
list/: 142.c  21.c  CMakeLists.txt
list/include/: CMakeLists.txt  node.c  node.h
others/: 168.c  26.c  CMakeLists.txt
stack/: 1047.c  20.c  496.c  682.c  844.c  CMakeLists.txt
tree/: 107.c  110.c  111.c  112.c  226.c  235.c  257.c  404.c  501.c  543.c  653.c  687.c  897.c  993.c  CMakeLists.txt
tree/include/: CMakeLists.txt  common.c  common.h
